--- a/src/components/DataExplorer/DataExplorerInput.scss
+++ b/src/components/DataExplorer/DataExplorerInput.scss
@@ -12,7 +12,7 @@
   }
 
   &.data-explorer {
-    animation: slideDown 0.2s ease-in;
+    animation: slideDown 0.3s ease-out;
   }
 
   .react-autoql-chatbar-input {
