use rgb values from accent colour for data preview

--- a/src/components/DataExplorer/DataExplorer.scss
+++ b/src/components/DataExplorer/DataExplorer.scss
@@ -112,7 +112,7 @@
     flex: 0 0 auto;
     font-weight: 600;
     font-size: 18px;
-    margin: 5px;
+    margin: 8px 5px;
 
     .react-autoql-icon {
       margin-right: 5px;
