--- a/src/components/DataMessenger/DataMessenger.scss
+++ b/src/components/DataMessenger/DataMessenger.scss
@@ -241,6 +241,7 @@
 .intro-qi-link {
   cursor: pointer;
   color: var(--react-autoql-accent-color);
+  font-weight: 600;
 
   .react-autoql-icon {
     margin-right: -3px;
