--- a/src/components/Checkbox/Checkbox.scss
+++ b/src/components/Checkbox/Checkbox.scss
@@ -43,6 +43,7 @@
   background: var(--react-autoql-background-color-checkbox);
   border: 1px solid;
   border-radius: 2px;
+  box-sizing: content-box;
 
   &:not(.react-autoql-checkbox--switch__input) {
     border-color: var(--react-autoql-accent-color, #26a7df);
