--- a/src/components/MultiSelect/MultiSelect.scss
+++ b/src/components/MultiSelect/MultiSelect.scss
@@ -33,6 +33,7 @@
   .react-autoql-select-arrow {
     flex: 0 0 auto;
     padding-top: 0.2em;
+    padding-left: 5px !important;
   }
 
   .react-autoql-multi-select-text {
@@ -48,7 +49,7 @@
     justify-content: center;
     align-items: center;
 
-    margin-left: 6px;
+    margin-left: 5px;
     padding: 0.4em 0.6em;
     border-radius: 2em;
     line-height: 0.9em;
