--- a/src/components/DataExplorer/DataExplorer.scss
+++ b/src/components/DataExplorer/DataExplorer.scss
@@ -87,10 +87,10 @@
 
         .react-autoql-data-preview-selected-columns-selector {
           font-size: 11px;
-          margin-left: 20px;
+          margin-left: 7px;
           color: var(--react-autoql-text-color-secondary);
           padding-left: 8px;
-          border-left: 1px solid var(--react-autoql-border-color);
+          border-left: 1px solid var(--react-autoql-backgroud-color-disabled);
 
           .react-autoql-select-and-label {
             padding-right: 0px;
@@ -190,8 +190,12 @@
     font-weight: 600;
     margin-bottom: 6px;
 
+    .react-autoql-data-explorer-title-text-sample-queries {
+      padding-bottom: 2px;
+    }
+
     .react-autoql-icon {
-      margin-right: 5px;
+      margin-right: 0;
     }
   }
 
