--- a/src/components/DataExplorer/SampleQueryList.scss
+++ b/src/components/DataExplorer/SampleQueryList.scss
@@ -25,6 +25,7 @@
       display: flex;
       flex-direction: row;
       align-items: center;
+      white-space: pre-wrap;
 
       .data-explorer-sample-chunk {
       }
@@ -45,7 +46,7 @@
       box-shadow: var(--react-autoql-box-shadow-1);
       color: var(--react-autoql-text-color-accent);
       background-color: var(--react-autoql-accent-color);
-      transition: background-color 0.1s, color 0.1s, font-size 0.1s;
+      transition: background-color 0.1s ease, color 0.1s ease, font-size 0.1s ease, opacity 0.1s ease;
       cursor: pointer;
 
       opacity: 0;
