--- a/src/components/DataExplorer/SampleQueryList.scss
+++ b/src/components/DataExplorer/SampleQueryList.scss
@@ -6,18 +6,19 @@
     display: flex;
     position: relative;
     flex-direction: row;
-    justify-content: space-between;
     font-size: 14px;
     padding: 5px;
     letter-spacing: 0.02em;
+    border-top: 1px solid var(--react-autoql-background-color-disabled);
 
-    &:not(:last-child) {
-      border-bottom: 1px solid var(--react-autoql-background-color-disabled);
+    .react-auoql-inline-number-editor-wrapper,
+    .autcomplete-input-popover-btn {
+      margin-left: 3px;
     }
 
     &:hover {
       .query-suggestion-send-btn {
-        opacity: 1;
+        opacity: 0.7;
       }
     }
 
@@ -26,9 +27,6 @@
       flex-direction: row;
       align-items: center;
       white-space: pre-wrap;
-
-      .data-explorer-sample-chunk {
-      }
     }
 
     .query-suggestion-send-btn {
@@ -38,7 +36,8 @@
       position: relative;
       display: flex;
       font-size: 19px;
-      margin: 10px;
+      margin: 7px;
+      margin-left: 20px;
       width: 30px;
       height: 30px;
       z-index: 1;
@@ -46,7 +45,7 @@
       box-shadow: var(--react-autoql-box-shadow-1);
       color: var(--react-autoql-text-color-accent);
       background-color: var(--react-autoql-accent-color);
-      transition: background-color 0.1s ease, color 0.1s ease, font-size 0.1s ease, opacity 0.1s ease;
+      transition: background-color 0.2s ease, color 0.2s ease, font-size 0.2s ease, opacity 0.2s ease;
       cursor: pointer;
 
       opacity: 0;
@@ -65,7 +64,7 @@
         height: 100%;
         border-radius: 50%;
         background-color: transparent;
-        transition: transform 0.1s, opacity 0.1s;
+        transition: transform 0.2s, opacity 0.2s;
         opacity: 0;
       }
 
@@ -90,6 +89,7 @@
 
       &:hover {
         font-size: 23px;
+        opacity: 1;
 
         &::before,
         &::after {
@@ -110,5 +110,38 @@
         line-height: 1em;
       }
     }
+  }
+}
+
+.autcomplete-input-popover-btn,
+.inline-number-input-editor-btn {
+  border: 1px solid transparent;
+  border-bottom-color: var(--react-autoql-accent-color);
+  color: var(--react-autoql-text-color-primary);
+  padding: 2px;
+  position: relative;
+  font-weight: 600;
+  padding-bottom: 2px;
+  transition: color 0.2s ease;
+  cursor: pointer;
+
+  &:hover,
+  &.autcomplete-input-popover-btn-active,
+  &.inline-number-input-editor-btn-active {
+    color: var(--react-autoql-accent-color);
+  }
+}
+
+.react-auoql-inline-number-editor-wrapper {
+  .react-autoql-input-and-label-container {
+    padding: 0;
+    .react-autoql-input-container .react-autoql-input[type='number'] {
+      border-radius: 0;
+      height: 35px;
+    }
+  }
+
+  .react-autoql-input-number-spin-button-container {
+    display: none !important;
   }
 }
